--- a/packages.config
+++ b/packages.config
@@ -6,6 +6,7 @@
   <package id="Carbon.Storage" version="1.6.0" targetFramework="net461" />
   <package id="Carbon.VersionControl" version="1.0.0" targetFramework="net461" />
   <package id="Carbon.Versioning" version="1.2.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="GitHub" version="1.4.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
