--- a/Web.config
+++ b/Web.config
@@ -30,6 +30,5 @@
     </compilation>
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
-  <connectionStrings>
-  </connectionStrings>
+  <connectionStrings><add name="SalaNivaEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=funkymonk.database.windows.net;initial catalog=SalaNiva;persist security info=True;user id=Stergianos;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
